<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/view_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="8">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/card_size"
                    android:layout_height="@dimen/card_size_height"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="@dimen/image_size"
                            android:layout_height="@dimen/image_size"
                            android:src="@drawable/google" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/m_top_text"
                            android:fontFamily="@font/baloo"
                            android:text="@string/google"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/card_size"
                    android:layout_height="@dimen/card_size_height"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="@dimen/image_size"
                            android:layout_height="@dimen/image_size"
                            android:src="@drawable/pdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/m_top_text"
                            android:fontFamily="@font/baloo"
                            android:text="@string/pdp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/card_size"
                    android:layout_height="@dimen/card_size_height"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="@dimen/image_size"
                            android:layout_height="@dimen/image_size"
                            android:src="@drawable/meta" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/m_top_text"
                            android:fontFamily="@font/baloo"
                            android:text="@string/meta"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/card_size"
                    android:layout_height="@dimen/card_size_height"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="@dimen/image_size"
                            android:layout_height="@dimen/image_size"
                            android:src="@drawable/im_instagram" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/m_top_text"
                            android:fontFamily="@font/baloo"
                            android:text="@string/Instagram"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/card_size"
                    android:layout_height="@dimen/card_size_height"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="@dimen/image_size"
                            android:layout_height="@dimen/image_size"
                            android:src="@drawable/tg" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/m_top_text"
                            android:fontFamily="@font/baloo"
                            android:text="@string/telegram"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/card_size"
                    android:layout_height="@dimen/card_size_height"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="@dimen/image_size"
                            android:layout_height="@dimen/image_size"
                            android:src="@drawable/tik" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/m_top_text"
                            android:fontFamily="@font/baloo"
                            android:text="@string/tiktok"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/card_size"
                    android:layout_height="@dimen/card_size_height"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="@dimen/image_size"
                            android:layout_height="@dimen/image_size"
                            android:src="@drawable/snap" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/m_top_text"
                            android:fontFamily="@font/baloo"
                            android:text="@string/snap"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/card_size"
                    android:layout_height="@dimen/card_size_height"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="@dimen/image_size"
                            android:layout_height="@dimen/image_size"
                            android:src="@drawable/twitter" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/m_top_text"
                            android:fontFamily="@font/baloo"
                            android:text="@string/twit"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>